@@ -4,7 +4,8 @@
  * ShowEQ Distributed under GPL
  * http://seq.sourceforge.net/
  *
- * Copyright 2002 Zaphod (dohpaz@users.sourceforge.net). All Rights Reserved.
+ * Copyright 2002-2003 Zaphod (dohpaz@users.sourceforge.net). 
+ *     All Rights Reserved.
  *
  * Contributed to ShowEQ by Zaphod (dohpaz@users.sourceforge.net) 
  * for use under the terms of the GNU General Public License, 
@@ -752,6 +753,103 @@ int XMLPreferences::getPrefKey(const QString& inName,
 }
 
 
+int64_t XMLPreferences::getPrefInt64(const QString& inName, 
+				     const QString& inSection, 
+				     int64_t def, 
+				     Persistence pers)
+{
+  // try to retrieve the preference
+  QVariant* preference = getPref(inName, inSection, pers);
+
+  // if preference was retrieved, return it as a string
+  if (preference != NULL)
+  {
+    int64_t value = def;
+
+    switch(preference->type())
+    {
+    case QVariant::String:
+      // convert it to a int64_t (in base 16)
+      value = strtoll(preference->toString(), 0, 16);
+      break;
+    case QVariant::Int:
+    case QVariant::UInt:
+      value = preference->toInt();
+      break;
+    case QVariant::Double:
+      value = int64_t(preference->toDouble());
+      break;
+    case QVariant::ByteArray:
+      {
+	QByteArray& ba = preference->asByteArray();
+	if (ba.size() == sizeof(int64_t))
+	  value = *(int64_t*)ba.data();
+	break;
+      }
+    default:
+      qWarning("XMLPreferences::getPrefInt64(%s, %s, %lld): preference found,\n"
+	       "\tbut type %s is not convertable to type int64_t!",
+	       (const char*)inName, (const char*)inSection, def,
+	       preference->typeName());
+    }
+
+    // return the key
+    return value;
+  }
+
+  // return the default value
+  return def;
+}
+
+uint64_t XMLPreferences::getPrefUInt64(const QString& inName, 
+				       const QString& inSection, 
+				       uint64_t def, 
+				       Persistence pers)
+{
+  // try to retrieve the preference
+  QVariant* preference = getPref(inName, inSection, pers);
+
+  // if preference was retrieved, return it as a string
+  if (preference != NULL)
+  {
+    uint64_t value = def;
+
+    switch(preference->type())
+    {
+    case QVariant::String:
+      // convert it to a uint64_t (in base 16)
+      value = strtoull(preference->toString(), 0, 16);
+      break;
+    case QVariant::Int:
+    case QVariant::UInt:
+      value = preference->toInt();
+      break;
+    case QVariant::Double:
+      value = uint64_t(preference->toDouble());
+      break;
+    case QVariant::ByteArray:
+      {
+	QByteArray& ba = preference->asByteArray();
+	if (ba.size() == sizeof(uint64_t))
+	  value = *(uint64_t*)ba.data();
+	break;
+      }
+    default:
+      qWarning("XMLPreferences::getPrefUInt64(%s, %s, %lld): preference found,\n"
+	       "\tbut type %s is not convertable to type uint64_t!",
+	       (const char*)inName, (const char*)inSection, def,
+	       preference->typeName());
+    }
+
+    // return the key
+    return value;
+  }
+
+  // return the default value
+  return def;
+}
+
+
 QVariant XMLPreferences::getPrefVariant(const QString& inName, 
 					const QString& inSection,
 					const QVariant& outDefault,
@@ -809,6 +907,27 @@ void XMLPreferences::setPrefKey(const QString& inName,
 #else
   setPref(inName, inSection, QVariant(QKeySequence(inValue)), pers);
 #endif
+}
+
+void XMLPreferences::setPrefInt64(const QString& inName,
+				  const QString& inSection,
+				  int64_t inValue,
+				  Persistence pers)
+{
+  QByteArray ba;
+  ba.duplicate((const char*)&inValue, sizeof(int64_t));
+  setPref(inName, inSection, ba, pers);
+}
+
+
+void XMLPreferences::setPrefUInt64(const QString& inName,
+				   const QString& inSection,
+				   uint64_t inValue,
+				   Persistence pers)
+{
+  QByteArray ba;
+  ba.duplicate((const char*)&inValue, sizeof(uint64_t));
+  setPref(inName, inSection, ba, pers);
 }
 
 void XMLPreferences::setPrefVariant(const QString& inName, 
